fmcsadmin
(c) 2017-2023 Emic Corporation <https://www.emic.co.jp/>
This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.

Version: 2.1.0 (in development)
- Add "-i" option to specify a private key file for FileMaker Admin API PKI Authentication (requires Claris FileMaker Server 19.6.1 or later).
- Tested with Claris FileMaker Server 19.6.
- Tested on macOS Ventura 13.
- Fix spelling in help messages.
- Built with Go 1.19.
- [INFO] Drop support for Claris FileMaker Server 19.0 and 19.1.
- [INFO] Drop support for macOS Catalina 10.15.
- [INFO] Drop support for Windows 10 Version 21H1.

Version: 2.0.0
Date: June 27, 2022
- Change to the Apache License, Version 2.0.
- Support Ubuntu 20.04 LTS.
- Add "CANCEL" command to cancel the currently running backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin cancel backup")
- Update "GET SERVERPREFS" command to check the status of parallel backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin get serverprefs ParallelBackupEnabled")
- Update "SET SERVERPREFS" command to enable or disable parallel backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin set serverprefs ParallelBackupEnabled=false")
- Add support for credentials via environment variables (FMS_USERNAME and FMS_PASSWORD).
- Add error messages for the FileMaker error code 956, 1702.
- Change an error message when specifying the host name of Claris FileMaker Cloud with "--fqdn" option.
- Tested with Claris FileMaker Server 19.5.
- Tested on Windows 11 and macOS Monterey 12.
- Built with Go 1.18.
- [INFO] Drop support for Claris FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
- [INFO] Drop support for 32-bit Windows version.
- [INFO] Drop support for Windows 10 Version 1903, 1909, 2004 and 20H2.
- [INFO] Drop support for macOS Mojave 10.14.
- [INFO] Drop support for CentOS Linux 8.
- [BUG FIX] Improve DNS error handling when using "--fqdn" option.